update Readme doku to describe debian package usage

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libopen62541cppwrapper (1.2) unstable; urgency=medium
+libopen62541cppwrapper (1.2-1) unstable; urgency=medium
 
   * Initial release 
 
